name:            aeson-loose
version:         1.0.0.0
license:         BSD3
category:        Text, Web, JSON
stability:       experimental
synopsis:        Loose JSON parsing for aeson
cabal-version:   >= 1.10
homepage:        https://github.com/xnuk/aeson-loose
bug-reports:     https://github.com/xnuk/aeson-loose/issues
build-type:      Simple

extra-source-files:
    unescape_string.c

flag developer
  description: operate in developer mode
  default: False
  manual: True

flag fast
  description: compile without optimizations
  default: False
  manual: True

library
  default-language: Haskell2010

  exposed-modules:
    Data.Aeson.Parser.Loose
  other-modules:
    Data.Aeson.Parser.Loose.Unescape

  build-depends:
    aeson >= 1.0 && <= 1.3,
    attoparsec >= 0.13.0.1,
    base >= 4.5 && < 5,
    base-compat >= 0.9.1 && < 0.10,
    ghc-prim >= 0.2,
    scientific >= 0.3.4.7 && < 0.4,
    text >= 1.1.1.0,
    unordered-containers >= 0.2.5.0,
    vector >= 0.8,
    bytestring >= 0.10.4

  ghc-options: -Wall

  if flag(developer)
    ghc-options: -Werror
    ghc-prof-options: -auto-all

  if flag(fast)
    ghc-options: -O0
  else
    ghc-options: -O2

  c-sources: unescape_string.c
  hs-source-dirs: src

source-repository head
  type:     git
  location: git://github.com/xnuk/aeson-loose.git
